# ai-safe-context

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: COMPARISON.md  IMPLEMENTATION_PLAN.md
src/ai_safe_context/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
