[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-safe-context"
version = "0.1.0"
description = "Local-first CLI that packs repositories into LLM-ready Markdown while redacting secrets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ai-safe-context contributors"}]
keywords = ["ai", "llm", "context", "secrets", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ai-safe-context = "ai_safe_context.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_safe_context"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
